syntax = "proto3";
package proto;

option go_package = "./proto";

message UTXORequest{
   string txhash = 1;

}
message UTXOResponse{
   string txhash = 1;
   string blockhash = 2;
   string fromwallet = 3;
   string towallet = 4;
   string amount = 5;
   string txtype = 6;
   string timestamp = 7;
   string error = 8;
   string blockid = 9;
}

message WalletBalanceRequest{
   string walletAddress = 1;
}
message WalletBalanceRespose{
  string walletAddress = 1;
  repeated string txhash =4;
  string amount = 2;
  string error = 3;
}

message UTXOWalletBalanceRespose{
   string walletAddress = 1;
   repeated Wallettx wallettx =4;
   repeated int64 NFT=5;
   string amount = 2;
   string error = 3;
}


message UTXOAddressRequest {
   string walletAddress = 1;
}
message UTXOAddressResponse {
   repeated Wallettx Wallettxs = 1;
   repeated string txhash = 2;
}
message Wallettx {
   string  walletAddress =1;
   string fromwallet = 2;
   string towallet = 3;
   string value = 4;
   string txtype = 5;
   string timestamp = 6;
   string blockhash = 7;
   string txstatus = 10;
   string txhash = 9;
   string error =8;
}

message WalletBalancesRequest{
   repeated string walletAddresses = 1;
}
message WalletBalancesRespose{
   repeated WalletBalanceRespose walletAddress = 1;
   string error =2;
}

message VWalletRequest{
   string walletAddress = 1;
}
message VWalletResponse{
   string walletAddress = 1;
   string blockhash = 2;
   string lockhash = 3;
   uint64 walletid = 4;
}

message NFTRequest{
   string nftid = 1;
}


message NFTResponse{
   string NFTid = 1;
   string NFTSender = 2;
   string NFTWallet = 3;
   string Txhash = 4;
   string Blockid = 5;
   string Blockhash = 6;
}

message StakeNFT{
   string NFTid = 1;
   string NFTSender = 2;
   string StakeAmount = 4;
   string Txhash = 5;
   string Blockid = 6;
   string Blockhash = 7;
   string StakedP = 10;
   string LockTime = 8;
   string UnlockTime = 9;
}



service UTXOs {
   rpc UTXOStream (stream UTXOResponse) returns (stream UTXOResponse) {}
   rpc NFTStream (stream NFTRequest) returns (stream NFTResponse) {}
   rpc VWalletStream (stream VWalletRequest) returns (stream VWalletResponse) {}
   rpc WalletBalanceStream (stream WalletBalanceRequest) returns (stream WalletBalanceRespose) {}
   rpc UTXOAddress (stream UTXOAddressRequest) returns (stream UTXOAddressResponse) {}
   rpc WalletBalancesStream (stream WalletBalancesRequest) returns (stream WalletBalancesRespose){}
}